--- a/src/index.scss
+++ b/src/index.scss
@@ -30,24 +30,60 @@ header {
   }
 }
 
+.cartEmpty {
+  text-align: center;
+
+  p {
+    width: 280px;
+    line-height: 24px;
+  }
+
+  .greenButton {
+    width: 245px;
+    margin-top: 20px;
+
+    &:hover {
+      img {
+        transform: rotate(180deg) translateX(3px);
+      }
+    }
+
+    img {
+      position: relative;
+      top: 1px;
+      transform: rotate(180deg);
+      margin-right: 15px;
+      transition: transform 0.15s ease-in-out;
+    }
+  }
+}
+
 .card__price {
   font-size: 13px;
   opacity: 0.5;
   text-transform: uppercase;
 }
 
-
 .search {
   border: 1px solid #F3F3F3;
   border-radius: 10px;
   padding: 0 15px;
-}
+  position: relative;
 
-input {
-  border: 0;
-  padding: 13px;
-  font-size: 16px;
-  width: 200px;
+  .clear {
+    position: absolute;
+    right: 15px;
+    width: 18px;
+    height: 18px;
+    top: 14px;
+  }
+
+  input {
+    border: 0;
+    padding: 13px;
+    font-size: 16px;
+    width: 200px;
+  }
 }
 
 .overlay {
@@ -77,7 +113,6 @@ input {
 }
 
 .cart__block {
-
   ul {
     display: block;
     margin-bottom: 40px !important;
@@ -98,7 +133,7 @@ input {
     margin: 0 7px;
   }
  
-  .green__button {
+  .greenButton {
     position: relative;
     &:hover {
       img {
@@ -115,7 +150,7 @@ input {
   }
 }
 
-.green__button {
+.greenButton {
   width: 100%;
   height: 55px;
   background: #9DD558;
